--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = "mongodb+srv://SuraaiyaAlam:suraaiya100@cluster0.qdmzq7t.mongodb.net"
+MONGODB_URI = "mongodb+srv://SuraaiyaAlam:Suraaiya100@cluster0.tbxqk58.mongodb.net"
