--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 JWT_SECRET="dev#secret"
 
-MONGODB_URI = "mongodb+srv://SuraaiyaAlam:Suraaiya100@cluster0.tbxqk58.mongodb.net"
+MONGODB_URI="mongodb+srv://SuraaiyaAlam:Suraaiya100@cluster0.tbxqk58.mongodb.net/"
+CLERK_WEBHOOK_SECRET=""
 CLERK_WEBHOOK_SECRET=""
 CLOUDINARY_API_KEY="396465579297425"
 CLOUDINARY_API_SECRET="Ko73kAWAaBN-QmPPk5PcaFW6Og4"
