removed / which was thowing error in .env

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 JWT_SECRET="dev#secret"
 
-MONGODB_URI="mongodb+srv://SuraaiyaAlam:Suraaiya100@cluster0.tbxqk58.mongodb.net/"
+MONGODB_URI="mongodb+srv://SuraaiyaAlam:Suraaiya100@cluster0.tbxqk58.mongodb.net"
 CLERK_WEBHOOK_SECRET=""
 CLERK_WEBHOOK_SECRET=""
 CLOUDINARY_API_KEY="396465579297425"
